5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4130/executions/1674_1107.log
== TEST (2019-04-29 21:54:58) 
-- CODE:
a = int(input("Dia de hoje: ")
b = int(input("Numero de dias apos hoje: "))
		  
x = "Hoje eh "
y = " e o dia futuro eh "
		  
c = (a + b) % 7
		  
if(a == 0):
	a = "domingo"
	if(c == 0):
		  c = "domingo"
	elif(c == 1):
		  c = "segunda"
	elif(c == 2):
		  c = "terca"
	elif(c == 3):
		  c = "quarta"
	elif(c == 4):
		  c = "quinta"
	elif(c == 5):
		  c = "sexta"
	elif(c == 6):
		  c = "sabado"
		  
-- ERROR:
File "XXXX", line 2
    b = int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:55:32) 
-- CODE:
a = int(input("Dia de hoje: ")
b = int(input("Numero de dias apos hoje: "))
		  
x = "Hoje eh "
y = " e o dia futuro eh "
		  
c = (a + b) % 7
		  
if(a == 0):
	a = "domingo"
	if(c == 0):
		  c = "domingo"
	elif(c == 1):
		  c = "segunda"
	elif(c == 2):
		  c = "terca"
	elif(c == 3):
		  c = "quarta"
	elif(c == 4):
		  c = "quinta"
	elif(c == 5):
		  c = "sexta"
	elif(c == 6):
		  c = "sabado"
		  
-- ERROR:
File "XXXX", line 2
    b = int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:55:57) 
-- CODE:
a = float(input("Dia de hoje: ")
b = float(input("Numero de dias apos hoje: "))
		  
x = "Hoje eh "
y = " e o dia futuro eh "
		  
c = (a + b) % 7
		  
if(a == 0):
	a = "domingo"
	if(c == 0):
		  c = "domingo"
	elif(c == 1):
		  c = "segunda"
	elif(c == 2):
		  c = "terca"
	elif(c == 3):
		  c = "quarta"
	elif(c == 4):
		  c = "quinta"
	elif(c == 5):
		  c = "sexta"
	elif(c == 6):
		  c = "sabado"
		  
-- ERROR:
File "XXXX", line 2
    b = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:56:08) 
-- CODE:
a = int(input("Dia de hoje: ")
b = int(input("Numero de dias apos hoje: "))
		  
x = "Hoje eh "
y = " e o dia futuro eh "
		  
c = (a + b) % 7
		  
if(a == 0):
	a = "domingo"
	if(c == 0):
		  c = "domingo"
	elif(c == 1):
		  c = "segunda"
	elif(c == 2):
		  c = "terca"
	elif(c == 3):
		  c = "quarta"
	elif(c == 4):
		  c = "quinta"
	elif(c == 5):
		  c = "sexta"
	elif(c == 6):
		  c = "sabado"
		  
-- ERROR:
File "XXXX", line 2
    b = int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:56:22) 
-- CODE:
a = int(input("Dia de hoje:")
b = int(input("Numero de dias apos hoje:"))
		  
x = "Hoje eh "
y = " e o dia futuro eh "
		  
c = (a + b) % 7
		  
if(a == 0):
	a = "domingo"
	if(c == 0):
		  c = "domingo"
	elif(c == 1):
		  c = "segunda"
	elif(c == 2):
		  c = "terca"
	elif(c == 3):
		  c = "quarta"
	elif(c == 4):
		  c = "quinta"
	elif(c == 5):
		  c = "sexta"
	elif(c == 6):
		  c = "sabado"
		  
-- ERROR:
File "XXXX", line 2
    b = int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 22:00:22) 
-- CODE:
a = int(input("Dia de hoje:")
b = int(input("Numero de dias apos hoje:"))
		  
x = "Hoje eh "
y = " e o dia futuro eh "
		  
c = (a + b) % 7
		  
if(a == 0):
	a = "domingo"
	if(c == 0):
		  c = "domingo"
	elif(c == 1):
		  c = "segunda"
	elif(c == 2):
		  c = "terca"
	elif(c == 3):
		  c = "quarta"
	elif(c == 4):
		  c = "quinta"
	elif(c == 5):
		  c = "sexta"
	elif(c == 6):
		  c = "sabado"
-- ERROR:
File "XXXX", line 2
    b = int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:09:55) 
-- CODE:
a = int(input("Dia de hoje:")
b = int(input("Numero de dias apos hoje:"))
		  
x = "Hoje eh "
y = " e o dia futuro eh "
		  
c = (a + b) % 7
		  
if(a == 0):
	a = "domingo"
	if(c == 0):
		  c = "domingo"
	elif(c == 1):
		  c = "segunda"
	elif(c == 2):
		  c = "terca"
	elif(c == 3):
		  c = "quarta"
	elif(c == 4):
		  c = "quinta"
	elif(c == 5):
		  c = "sexta"
	elif(c == 6):
		  c = "sabado"
	print(x, a, y, c)
elif(a == 1):
	a = "segunda"
	if(c == 0):
		  c = "domingo"
	elif(c == 1):
		  c = "segunda"
	elif(c == 2):
		  c = "terca"
	elif(c == 3):
		  c = "quarta"
	elif(c == 4):
		  c = "quinta"
	elif(c == 5):
		  c = "sexta"
	elif(c == 6):
		  c = "sabado"
	print(x, a, y, c)
elif(a == 2):
	a = "terca"
	if(c == 0):
		  c = "domingo"
	elif(c == 1):
		  c = "segunda"
	elif(c == 2):
		  c = "terca"
	elif(c == 3):
		  c = "quarta"
	elif(c == 4):
		  c = "quinta"
	elif(c == 5):
		  c = "sexta"
	elif(c == 6):
		  c = "sabado"
	print(x, a, y, c)
elif(a == 3):
	a = "quarta"
	if(c == 0):
		  c = "domingo"
	elif(c == 1):
		  c = "segunda"
	elif(c == 2):
		  c = "terca"
	elif(c == 3):
		  c = "quarta"
	elif(c == 4):
		  c = "quinta"
	elif(c == 5):
		  c = "sexta"
	elif(c == 6):
		  c = "sabado"
	print(x, a, y, c)
elif(a == 4):
	a = "quinta"
	if(c == 0):
		  c = "domingo"
	elif(c == 1):
		  c = "segunda"
	elif(c == 2):
		  c = "terca"
	elif(c == 3):
		  c = "quarta"
	elif(c == 4):
		  c = "quinta"
	elif(c == 5):
		  c = "sexta"
	elif(c == 6):
		  c = "sabado"
	print(x, a, y, c)
elif(a == 5):
	a = "sexta"
	if(c == 0):
		  c = "domingo"
	elif(c == 1):
		  c = "segunda"
	elif(c == 2):
		  c = "terca"
	elif(c == 3):
		  c = "quarta"
	elif(c == 4):
		  c = "quinta"
	elif(c == 5):
		  c = "sexta"
	elif(c == 6):
		  c = "sabado"
	print(x, a, y, c)
elif(a == 6):
	a = "sabado"
	if(c == 0):
		  c = "domingo"
	elif(c == 1):
		  c = "segunda"
	elif(c == 2):
		  c = "terca"
	elif(c == 3):
		  c = "quarta"
	elif(c == 4):
		  c = "quinta"
	elif(c == 5):
		  c = "sexta"
	elif(c == 6):
		  c = "sabado"
	print(x, a, y, c)
else:
	print("A entrada",a," eh invalida")
-- ERROR:
File "XXXX", line 2
    b = int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:10:27) 
-- CODE:
a = int(input("Dia de hoje:"))
b = int(input("Numero de dias apos hoje:"))
		  
x = "Hoje eh "
y = " e o dia futuro eh "
		  
c = (a + b) % 7
		  
if(a == 0):
	a = "domingo"
	if(c == 0):
		  c = "domingo"
	elif(c == 1):
		  c = "segunda"
	elif(c == 2):
		  c = "terca"
	elif(c == 3):
		  c = "quarta"
	elif(c == 4):
		  c = "quinta"
	elif(c == 5):
		  c = "sexta"
	elif(c == 6):
		  c = "sabado"
	print(x, a, y, c)
elif(a == 1):
	a = "segunda"
	if(c == 0):
		  c = "domingo"
	elif(c == 1):
		  c = "segunda"
	elif(c == 2):
		  c = "terca"
	elif(c == 3):
		  c = "quarta"
	elif(c == 4):
		  c = "quinta"
	elif(c == 5):
		  c = "sexta"
	elif(c == 6):
		  c = "sabado"
	print(x, a, y, c)
elif(a == 2):
	a = "terca"
	if(c == 0):
		  c = "domingo"
	elif(c == 1):
		  c = "segunda"
	elif(c == 2):
		  c = "terca"
	elif(c == 3):
		  c = "quarta"
	elif(c == 4):
		  c = "quinta"
	elif(c == 5):
		  c = "sexta"
	elif(c == 6):
		  c = "sabado"
	print(x, a, y, c)
elif(a == 3):
	a = "quarta"
	if(c == 0):
		  c = "domingo"
	elif(c == 1):
		  c = "segunda"
	elif(c == 2):
		  c = "terca"
	elif(c == 3):
		  c = "quarta"
	elif(c == 4):
		  c = "quinta"
	elif(c == 5):
		  c = "sexta"
	elif(c == 6):
		  c = "sabado"
	print(x, a, y, c)
elif(a == 4):
	a = "quinta"
	if(c == 0):
		  c = "domingo"
	elif(c == 1):
		  c = "segunda"
	elif(c == 2):
		  c = "terca"
	elif(c == 3):
		  c = "quarta"
	elif(c == 4):
		  c = "quinta"
	elif(c == 5):
		  c = "sexta"
	elif(c == 6):
		  c = "sabado"
	print(x, a, y, c)
elif(a == 5):
	a = "sexta"
	if(c == 0):
		  c = "domingo"
	elif(c == 1):
		  c = "segunda"
	elif(c == 2):
		  c = "terca"
	elif(c == 3):
		  c = "quarta"
	elif(c == 4):
		  c = "quinta"
	elif(c == 5):
		  c = "sexta"
	elif(c == 6):
		  c = "sabado"
	print(x, a, y, c)
elif(a == 6):
	a = "sabado"
	if(c == 0):
		  c = "domingo"
	elif(c == 1):
		  c = "segunda"
	elif(c == 2):
		  c = "terca"
	elif(c == 3):
		  c = "quarta"
	elif(c == 4):
		  c = "quinta"
	elif(c == 5):
		  c = "sexta"
	elif(c == 6):
		  c = "sabado"
	print(x, a, y, c)
else:
	print("A entrada",a," eh invalida")
-- OUTPUT:
A entrada 9  eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:10:43) 
-- CODE:
a = int(input("Dia de hoje:"))
b = int(input("Numero de dias apos hoje:"))
		  
x = "Hoje eh "
y = " e o dia futuro eh "
		  
c = (a + b) % 7
		  
if(a == 0):
	a = "domingo"
	if(c == 0):
		  c = "domingo"
	elif(c == 1):
		  c = "segunda"
	elif(c == 2):
		  c = "terca"
	elif(c == 3):
		  c = "quarta"
	elif(c == 4):
		  c = "quinta"
	elif(c == 5):
		  c = "sexta"
	elif(c == 6):
		  c = "sabado"
	print(x, a, y, c)
elif(a == 1):
	a = "segunda"
	if(c == 0):
		  c = "domingo"
	elif(c == 1):
		  c = "segunda"
	elif(c == 2):
		  c = "terca"
	elif(c == 3):
		  c = "quarta"
	elif(c == 4):
		  c = "quinta"
	elif(c == 5):
		  c = "sexta"
	elif(c == 6):
		  c = "sabado"
	print(x, a, y, c)
elif(a == 2):
	a = "terca"
	if(c == 0):
		  c = "domingo"
	elif(c == 1):
		  c = "segunda"
	elif(c == 2):
		  c = "terca"
	elif(c == 3):
		  c = "quarta"
	elif(c == 4):
		  c = "quinta"
	elif(c == 5):
		  c = "sexta"
	elif(c == 6):
		  c = "sabado"
	print(x, a, y, c)
elif(a == 3):
	a = "quarta"
	if(c == 0):
		  c = "domingo"
	elif(c == 1):
		  c = "segunda"
	elif(c == 2):
		  c = "terca"
	elif(c == 3):
		  c = "quarta"
	elif(c == 4):
		  c = "quinta"
	elif(c == 5):
		  c = "sexta"
	elif(c == 6):
		  c = "sabado"
	print(x, a, y, c)
elif(a == 4):
	a = "quinta"
	if(c == 0):
		  c = "domingo"
	elif(c == 1):
		  c = "segunda"
	elif(c == 2):
		  c = "terca"
	elif(c == 3):
		  c = "quarta"
	elif(c == 4):
		  c = "quinta"
	elif(c == 5):
		  c = "sexta"
	elif(c == 6):
		  c = "sabado"
	print(x, a, y, c)
elif(a == 5):
	a = "sexta"
	if(c == 0):
		  c = "domingo"
	elif(c == 1):
		  c = "segunda"
	elif(c == 2):
		  c = "terca"
	elif(c == 3):
		  c = "quarta"
	elif(c == 4):
		  c = "quinta"
	elif(c == 5):
		  c = "sexta"
	elif(c == 6):
		  c = "sabado"
	print(x, a, y, c)
elif(a == 6):
	a = "sabado"
	if(c == 0):
		  c = "domingo"
	elif(c == 1):
		  c = "segunda"
	elif(c == 2):
		  c = "terca"
	elif(c == 3):
		  c = "quarta"
	elif(c == 4):
		  c = "quinta"
	elif(c == 5):
		  c = "sexta"
	elif(c == 6):
		  c = "sabado"
	print(x, a, y, c)
else:
	print("A entrada",a," eh invalida")
-- EXECUTION TIME:
0.182849
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9  eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh  sabado  e o dia futuro eh  segunda
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:56:07) 
-- CODE:
a = int(input("Dia de hoje:"))
b = int(input("Numero de dias apos hoje:"))
		  
x = "Hoje eh "
y = " e o dia futuro eh "
		  
c = (a + b) % 7
		  
if(a == 0):
	a = "domingo"
	if(c == 0):
		  c = "domingo"
	elif(c == 1):
		  c = "segunda"
	elif(c == 2):
		  c = "terca"
	elif(c == 3):
		  c = "quarta"
	elif(c == 4):
		  c = "quinta"
	elif(c == 5):
		  c = "sexta"
	elif(c == 6):
		  c = "sabado"
	print(x, a, y, c)
elif(a == 1):
	a = "segunda"
	if(c == 0):
		  c = "domingo"
	elif(c == 1):
		  c = "segunda"
	elif(c == 2):
		  c = "terca"
	elif(c == 3):
		  c = "quarta"
	elif(c == 4):
		  c = "quinta"
	elif(c == 5):
		  c = "sexta"
	elif(c == 6):
		  c = "sabado"
	print(x, a, y, c)
elif(a == 2):
	a = "terca"
	if(c == 0):
		  c = "domingo"
	elif(c == 1):
		  c = "segunda"
	elif(c == 2):
		  c = "terca"
	elif(c == 3):
		  c = "quarta"
	elif(c == 4):
		  c = "quinta"
	elif(c == 5):
		  c = "sexta"
	elif(c == 6):
		  c = "sabado"
	print(x, a, y, c)
elif(a == 3):
	a = "quarta"
	if(c == 0):
		  c = "domingo"
	elif(c == 1):
		  c = "segunda"
	elif(c == 2):
		  c = "terca"
	elif(c == 3):
		  c = "quarta"
	elif(c == 4):
		  c = "quinta"
	elif(c == 5):
		  c = "sexta"
	elif(c == 6):
		  c = "sabado"
	print(x, a, y, c)
elif(a == 4):
	a = "quinta"
	if(c == 0):
		  c = "domingo"
	elif(c == 1):
		  c = "segunda"
	elif(c == 2):
		  c = "terca"
	elif(c == 3):
		  c = "quarta"
	elif(c == 4):
		  c = "quinta"
	elif(c == 5):
		  c = "sexta"
	elif(c == 6):
		  c = "sabado"
	print(x, a, y, c)
elif(a == 5):
	a = "sexta"
	if(c == 0):
		  c = "domingo"
	elif(c == 1):
		  c = "segunda"
	elif(c == 2):
		  c = "terca"
	elif(c == 3):
		  c = "quarta"
	elif(c == 4):
		  c = "quinta"
	elif(c == 5):
		  c = "sexta"
	elif(c == 6):
		  c = "sabado"
	print(x, a, y, c)
elif(a == 6):
	a = "sabado"
	if(c == 0):
		  c = "domingo"
	elif(c == 1):
		  c = "segunda"
	elif(c == 2):
		  c = "terca"
	elif(c == 3):
		  c = "quarta"
	elif(c == 4):
		  c = "quinta"
	elif(c == 5):
		  c = "sexta"
	elif(c == 6):
		  c = "sabado"
	print(x, a, y, c)
else:
	print("A entrada",a," eh invalida")
-- OUTPUT:
A entrada 9  eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:56:17) 
-- CODE:
a = int(input("Dia de hoje:"))
b = int(input("Numero de dias apos hoje:"))
		  
x = "Hoje eh "
y = " e o dia futuro eh "
		  
c = (a + b) % 7
		  
if(a == 0):
	a = "domingo"
	if(c == 0):
		  c = "domingo"
	elif(c == 1):
		  c = "segunda"
	elif(c == 2):
		  c = "terca"
	elif(c == 3):
		  c = "quarta"
	elif(c == 4):
		  c = "quinta"
	elif(c == 5):
		  c = "sexta"
	elif(c == 6):
		  c = "sabado"
	print(x, a, y, c)
elif(a == 1):
	a = "segunda"
	if(c == 0):
		  c = "domingo"
	elif(c == 1):
		  c = "segunda"
	elif(c == 2):
		  c = "terca"
	elif(c == 3):
		  c = "quarta"
	elif(c == 4):
		  c = "quinta"
	elif(c == 5):
		  c = "sexta"
	elif(c == 6):
		  c = "sabado"
	print(x, a, y, c)
elif(a == 2):
	a = "terca"
	if(c == 0):
		  c = "domingo"
	elif(c == 1):
		  c = "segunda"
	elif(c == 2):
		  c = "terca"
	elif(c == 3):
		  c = "quarta"
	elif(c == 4):
		  c = "quinta"
	elif(c == 5):
		  c = "sexta"
	elif(c == 6):
		  c = "sabado"
	print(x, a, y, c)
elif(a == 3):
	a = "quarta"
	if(c == 0):
		  c = "domingo"
	elif(c == 1):
		  c = "segunda"
	elif(c == 2):
		  c = "terca"
	elif(c == 3):
		  c = "quarta"
	elif(c == 4):
		  c = "quinta"
	elif(c == 5):
		  c = "sexta"
	elif(c == 6):
		  c = "sabado"
	print(x, a, y, c)
elif(a == 4):
	a = "quinta"
	if(c == 0):
		  c = "domingo"
	elif(c == 1):
		  c = "segunda"
	elif(c == 2):
		  c = "terca"
	elif(c == 3):
		  c = "quarta"
	elif(c == 4):
		  c = "quinta"
	elif(c == 5):
		  c = "sexta"
	elif(c == 6):
		  c = "sabado"
	print(x, a, y, c)
elif(a == 5):
	a = "sexta"
	if(c == 0):
		  c = "domingo"
	elif(c == 1):
		  c = "segunda"
	elif(c == 2):
		  c = "terca"
	elif(c == 3):
		  c = "quarta"
	elif(c == 4):
		  c = "quinta"
	elif(c == 5):
		  c = "sexta"
	elif(c == 6):
		  c = "sabado"
	print(x, a, y, c)
elif(a == 6):
	a = "sabado"
	if(c == 0):
		  c = "domingo"
	elif(c == 1):
		  c = "segunda"
	elif(c == 2):
		  c = "terca"
	elif(c == 3):
		  c = "quarta"
	elif(c == 4):
		  c = "quinta"
	elif(c == 5):
		  c = "sexta"
	elif(c == 6):
		  c = "sabado"
	print(x, a, y, c)
else:
	print("A entrada",a," eh invalida")
-- OUTPUT:
A entrada 9  eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
